Fix word breaks in popup (#805)
* Fix word breaks in popup. See #312

* Click to copy

* Copy styling

* Copy message

* Copy styling

* cleanup

* cleanup

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -697,6 +697,8 @@ body.blocked .actions > .main-controls {
 .blocked-info {
   hyphens: none;
   word-wrap: break-word;
+  line-height: 16px;
+  position: relative;
 }
 
 .blocked-info label {
@@ -710,6 +712,46 @@ body.blocked .actions > .main-controls {
   display: block;
   font-size: 90%;
   margin: 0;
+}
+
+.blocked-info strong {
+  cursor: pointer;
+  transition: all .1s;
+  border-bottom: 1px dotted #000;
+}
+
+.blocked-info strong.copied {
+  background: hsl(170, 40%, 80%);
+  color: #000;
+}
+
+.copy-message {
+  white-space: nowrap;
+  position: absolute;
+  display: none;
+  top: 0;
+  left: calc(var(--outer-padding) * -1);
+  right: calc(var(--outer-padding) * -1);
+  font-weight: bold;
+  font-size: 13px;
+  text-align: center;
+  padding: 4px 0;
+  background: hsl(170, 40%, 80%);
+  color: #000;
+  z-index: 10;
+}
+
+.copy-message.show-message {
+  display: block;
+}
+
+.blocked-info strong:after {
+  content: '';
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAMAAAC67D+PAAAABGdBTUEAALGPC/xhBQAAAAFzUkdCAK7OHOkAAAAGUExURQAAAAAAAKVnuc8AAAABdFJOUwBA5thmAAAAIElEQVQI12NgYGCEAgYgkwEMGBFijEhixDMZkUSRLQAACpYALjrE2uIAAAAASUVORK5CYII=)center no-repeat;
+  height: 10px;
+  width: 10px;
+  display: inline-flex;
+  margin-left: 3px;
 }
 
 /******************************************/
